--- a/app/src/main/res/layout/movie_layout_adapter.xml
+++ b/app/src/main/res/layout/movie_layout_adapter.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="150dp"
+    android:layout_width="match_parent"
     android:layout_height="250dp"
     android:layout_margin="5dp"
     android:elevation="10dp"
@@ -28,7 +28,7 @@
             android:layout_margin="8dp"
             android:layout_gravity="center"
             android:textColor="@android:color/black"
-            android:textSize="16sp"
+            android:textSize="14sp"
             tools:text="avatar"/>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
